syntax = "proto3";

package product;

option go_package = ".";

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int64 amount = 5;
    string created_at = 6;
    string updated_at = 7;
    string deleted_at = 8;
}

message ProductId {
    string product_id = 1;
}

message GetAllProductRequest {
    int64 page = 1;
    int64 limit = 2;
}

message GetAllProductResponse {
    int64 count = 1;
    repeated Product products = 2;
}

message Status {
  bool success = 1;
}

message ProductAmountRequest {
    string product_id = 1;
    int64 amount = 2;
}

message ProductAmountResponse {
    bool is_enough = 1;
    Product product = 2;
}

message CheckAmountResponse {
    string product_id = 1;
    int64 amount = 2;
}

message BuyProductRequest {
    string user_id = 1;
    string product_id = 2;
    int64 amount = 3;
}

message UserId {
    string user_id = 1;
}

message GetBoughtProductsResponse {
    repeated Product products = 1;
}


service ProductService {
    rpc CreateProduct(Product) returns (Product);
    rpc GetProductById(ProductId) returns (Product);
    rpc UpdateProduct(Product) returns (Product);
    rpc DeleteProduct(ProductId) returns (Status);
    rpc ListProducts(GetAllProductRequest) returns (GetAllProductResponse);
    rpc IncreaseAmount(ProductAmountRequest) returns (ProductAmountResponse);
    rpc DecreaseAmount(ProductAmountRequest) returns (ProductAmountResponse);
    rpc CheckAmount(ProductId) returns (CheckAmountResponse);
    rpc BuyProduct(BuyProductRequest) returns (Product);
    rpc GetBoughtProductsByUserId(UserId) returns (GetBoughtProductsResponse);
}
